sfdx/force-app/main/default/objects/Referral__c/Referral__c.object-meta.xml
<CustomObject>
    <description>Advisor-referral attribution. Records that a Joined advisor (Referring_Advisor__c) referred a prospect account (Prospect_Account__c). RevOps-managed. Cascades Final_Source__c = 'Advisor Referral' onto the prospect's open Recruiting Opportunities via flow.</description>
    <label>Referral</label>
    <nameField>
        <displayFormat>REF-{0000}</displayFormat>
        <label>Referral Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referrals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>