sfdx/force-app/main/default/objects/Referral__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Freeform notes about this referral (relationship context, how the introduction happened, etc.).</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>