sfdx/force-app/main/default/objects/Referral__c/fields/Prospect_Account__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Account__c</fullName>
    <description>The prospect Account this referral is for. Master side of the master-detail (cascade delete is implicit).</description>
    <label>Prospect Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>