sfdx/force-app/main/default/objects/Referral__c/fields/Referral_Key__c.field-meta.xml
<CustomField>
    <fullName>Referral_Key__c</fullName>
    <description>Uniqueness key: Prospect_Account__c + '|' + Referring_Advisor__c. Populated by before-save flow. Prevents exact duplicate (Prospect, Advisor) pairs while allowing multiple different advisors to refer the same prospect (joint referrals).</description>
    <externalId>true</externalId>
    <label>Referral Key</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>